Fix second main section to be responsive when on mobile dimensions. THe header was not adapting and over flowing the container, issue is now fixed. The card items with image and description will wrap underneath in mobile viewport

--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
     height: 100bh;
 margin: 0;
 padding: 0;
+font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .header {
@@ -72,16 +73,30 @@ margin-bottom: 30px;
 
 .main-2-container {
     display: flex;
-    height: 400px;
+    min-height: 400px;
     justify-content: center;
     align-items: center;
 flex-direction: column;
-gap: 50px;
+flex: 2 1 auto;
+padding: 50px;
+
 }
 
+.main-2-items-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    flex: 2 1 auto;
+padding: 0
+;margin: 0;
+text-align: center;
+gap: 50px
+}
 .main-2-container h2 {
     font-size: 34px;
     font-weight: 900;
+padding: 20px;
 
 }
 
